fix handling of URL and local directory in parsing files